# pickwise

./: .env.example  .gitignore  README.md  main.py  next.config.ts  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  README.md
backend/src/: config.py  errors.py
backend/src/agent/: graph.py  nodes.py  state.py
backend/src/api/: routes.py
backend/src/tools/: scraper_tool.py  search_tool.py
components/: app-chat-input.tsx  app-chat.tsx  app-header.tsx  chat-activity.tsx  chat-shell.tsx
components/ai-elements/: external-link-modal.tsx  reasoning.tsx
frontend/: README.md  eslint.config.mjs  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/stream/: route.ts
frontend/components/: app-chat-input.tsx  app-chat.tsx  app-header.tsx  chat-activity.tsx  theme-toggle.tsx
frontend/components/ai-elements/: external-link-modal.tsx  message.tsx
frontend/lib/: use-keyboard-offset.ts
src/: config.py
src/agent/: graph.py  nodes.py  state.py
src/api/: routes.py  stream_events.py
src/tools/: scraper_tool.py  search_tool.py
