[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openrouter>=0.2.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
]
